Corrected layout issues on the makeup and sfx images

--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -214,7 +214,7 @@
   }
 }
 
-@media only screen and (min-width: 700px) and (max-width: 799px) {
+@media only screen and (min-width: 700px) and (max-width: 899px) {
   .gallery-container {
     img {
       height: 129px;
@@ -255,6 +255,56 @@
 
     :nth-child(16) {
       grid-area: 5 / 2 / 6 / 4;
+    }
+  }
+}
+
+@media only screen and (min-width: 900px) and (max-width: 1099px) {
+  .gallery-container {
+    img {
+      height: 145px;
+      width: 164px;
+    }
+
+    :nth-child(3) {
+      height: 309px !important;
+    }
+
+    :nth-child(5) {
+      width: 347px !important;
+    }
+
+    :nth-child(11) {
+      height: 309px !important;
+    }
+
+    :nth-child(16) {
+      width: 347px !important;
+    }
+  }
+}
+
+@media only screen and (min-width: 1100px) and (max-width: 1299px) {
+  .gallery-container {
+    img {
+      height: 170px;
+      width: 195px;
+    }
+
+    :nth-child(3) {
+      height: 362px !important;
+    }
+
+    :nth-child(5) {
+      width: 412px !important;
+    }
+
+    :nth-child(11) {
+      height: 362px !important;
+    }
+
+    :nth-child(16) {
+      width: 412px !important;
     }
   }
 }
